Link in new account email

--- a/app/views/discovery-2023/email/invite-new-account.html
+++ b/app/views/discovery-2023/email/invite-new-account.html
@@ -52,12 +52,12 @@
       {% if data.error === 'trueNow' %} 
 
       <a href="../create-account/spinner-set-up?error=trueNow" target="_blank" class="nhsuk-button">Finish setting up your NHS login</a>
-      <p><a href="../create-account/spinner-set-up?error=trueNow" target="_blank">https://settings.login.nhs.uk/</a></p>
+      <p><a href="../create-account/spinner-set-up?error=trueNow" target="_blank">https://access.login.nhs.uk/finish-set-up</a></p>
 
       {% else %}
 
       <a href="../existing-uplift/spinner-set-up" target="_blank" class="nhsuk-button">Finish setting up your NHS login</a>
-      <p><a href="../existing-uplift/spinner-set-up" target="_blank">https://settings.login.nhs.uk/</a></p>
+      <p><a href="../existing-uplift/spinner-set-up" target="_blank">https://access.login.nhs.uk/finish-set-up</a></p>
       
       {% endif %}
       <div class="nhsuk-hint" id="example-with-hint-text-hint">Please do not reply to this email - this is an automated message</div>
