Fix email links

--- a/app/views/discovery-2023/email/success-uplift.html
+++ b/app/views/discovery-2023/email/success-uplift.html
@@ -15,14 +15,14 @@
       <p>
         You have passed our checks and can now use your NHS login to access the: 
       </p>
-        <ol>
-          <li>
-            <p>NHS App<a href="https://www.nhsapp.service.nhs.uk/login">https://www.nhsapp.service.nhs.uk/login</a></p>
-          </li>
-          <li>
-            <p>NHS website<a href="https://www.nhs.uk/">https://www.nhs.uk/</a></p>
-          </li>
-        </ol>
+      <ul>
+        <li>
+          <p>NHS App - <a href="https://www.nhsapp.service.nhs.uk/login">https://www.nhsapp.service.nhs.uk/login</a></p>
+        </li>
+        <li>
+          <p>NHS website - <a href="https://www.nhs.uk/">https://www.nhs.uk/</a></p>
+        </li>
+      </ul>
 
       <p>
         You can also use the service your GP has recommended and other digital health and care services.
