--- a/app/views/discovery-2023/create-account/steps-who.html
+++ b/app/views/discovery-2023/create-account/steps-who.html
@@ -28,7 +28,7 @@ Next steps
                   <p class="service-access__item__title__text__leftandright"><b>Next step</b></p>
                   <h3 class="service-access__item__title">Get a security code</h3>
                   <div class="service-access__item__desc">
-                    <p>We need to confirm it's you before you access your NHS login.</p>
+                    <p>We need to confirm it's you.</p>
                     <p>We will send a 6 digit security code to the mobile phone number you used to register with your GP.</p>
                   </div>
                   <form method="POST">
