Content changes for sent email and enter password

--- a/app/views/discovery-2023/existing-uplift/login-enter-password.html
+++ b/app/views/discovery-2023/existing-uplift/login-enter-password.html
@@ -18,7 +18,9 @@
               Enter your password
             </h1>
           </legend>
-          <p class="nhsuk-body">Enter your password to log in.</p>
+          <p class="nhsuk-body">
+            This is the password you set up with your NHS login account.
+          </p>
           <div class="nhsuk-form-group">
             <label class="nhsuk-label" for="createPassword">
               Password
@@ -32,7 +34,7 @@
                 </button>
               </div>
           </div>
-          <p class="nhsuk-body">If you cannot remember your password you can <a href="/nhslogin/login/check-your-email">reset it</a>.</p>
+          <p class="nhsuk-body">If you cannot remember the password you set up with your NHS login account you can <a href="/nhslogin/login/check-your-email">reset it</a>.</p>
         <div>
 
           {% if data.p5 === 'trueNow' %}
