--- a/app/views/discovery-2023/email/existing-account-uplift.html
+++ b/app/views/discovery-2023/email/existing-account-uplift.html
@@ -15,9 +15,9 @@ Finish setting up your NHS login
       <p class="nhsuk-body">
         Dear {{ data.UserFirstName or 'Alex' }} {{ data.UserLastName or 'Taylor' }},
       </p>
-
-      <p>
-        Your GP has recommended that you finish setting up an NHS login so you can have full access to services that use NHS login.
+      
+      <p class="nhsuk-body">
+        Your GP has recommended that you use the <strong>NHS App</strong>, to access it you will need an NHS login account.
       </p>
 
       <p class="nhsuk-body">This means you can do things like: 
@@ -43,6 +43,10 @@ Finish setting up your NHS login
 
       <p class="nhsuk-body">
         We need to send a 6 digit security code to the mobile phone number you used to register with your GP.
+      </p>
+
+      <p class="nhsuk-body">
+        You will need to enter the password you set up with your NHS login account.
       </p>
 
       <p class="nhsuk-body">This invitation will expire in <strong>7 days</strong>.</p>
