--- a/app/views/discovery-2023/email/invite-new-account.html
+++ b/app/views/discovery-2023/email/invite-new-account.html
@@ -17,7 +17,7 @@
       </p>
       
       <p class="nhsuk-body">
-        Your GP has recommended that you set up an NHS login so you can access a health service or app.
+        Your GP has recommended that you use the <strong>NHS App</strong>, to access it you will need an NHS login account.
       </p>
 
       <p class="nhsuk-body">This means you can do things like: 
@@ -38,7 +38,7 @@
       </p>
 
       <h2 class="nhsuk-heading-m">
-        To set up your account
+        To finish setting up your account
       </h2>
 
       <p class="nhsuk-body">
