--- a/app/views/discovery-2023/existing-uplift/steps-completed.html
+++ b/app/views/discovery-2023/existing-uplift/steps-completed.html
@@ -48,9 +48,6 @@ You have set up an NHS login
                     <p style="font-size:18px">
                       Make sure you download the NHS App if you haven't already.
                     </p>
-                    <p style="font-size:18px">
-                      You can now log in to the service your GP has recommended and other digital health and care services.
-                    </p>
 
                       <a href="https://www.nhsapp.service.nhs.uk/login" target="_blank" role="button" draggable="false" class="nhsuk-button">
                         Log in
@@ -64,6 +61,9 @@ You have set up an NHS login
                         </li>
                         <li>
                           If you have technical issues, <a href="https://help.login.nhs.uk/">visit the NHS login help centre</a>
+                        </li>
+                        <li>
+                          <a href="https://www.nhs.uk/nhs-services/online-services/nhs-login/websites-and-apps-you-can-access-with-nhs-login/">Find out more about the services you can access with NHS login</a>
                         </li>
                       </ul>
                     </p>
