--- a/app/views/discovery-2023/email/invite-new-account.html
+++ b/app/views/discovery-2023/email/invite-new-account.html
@@ -17,7 +17,7 @@
       </p>
       
       <p class="nhsuk-body">
-        Your GP has recommended that you use the <strong>NHS App</strong>, to access it you will need an NHS login account.
+        Your GP has recommended that you use the <strong>NHS App</strong>. To access it you will need an NHS login account.
       </p>
 
       <p class="nhsuk-body">This means you can do things like: 
