--- a/app/views/discovery-2023/existing-uplift/login-enter-password.html
+++ b/app/views/discovery-2023/existing-uplift/login-enter-password.html
@@ -34,7 +34,7 @@
                 </button>
               </div>
           </div>
-          <p class="nhsuk-body">If you cannot remember the password you set up with your NHS login account you can <a href="/nhslogin/login/check-your-email">reset it</a>.</p>
+          <p class="nhsuk-body">You can <a href="/nhslogin/login/check-your-email">reset your password</a> if you cannot remember it.</p>
         <div>
 
           {% if data.p5 === 'trueNow' %}
