--- a/app/views/discovery-2023/error/account-disabled.html
+++ b/app/views/discovery-2023/error/account-disabled.html
@@ -8,7 +8,7 @@
 
 <!-- Set the page title inside the pageTitle block -->
 {% block pageTitle %}
-There was a problem
+There is a problem
 {% endblock %}
 
 <!-- Breadcrumb goes inside the beforeContent block -->
@@ -29,15 +29,18 @@ There was a problem
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
 
-      <h1>There was a problem</h1>  
+      <h1>You cannot use your NHS login</h1>  
 
-          <p>You have entered the wrong date of birth.</p>
+          <p>There is a problem that we are looking at.</p>
 
-          <p><a href="../setup/verification">Go back and enter your date of birth again</a>.</p>
+          <p>You will not be able to use your NHS login until we have fixed the problem. This is to keep your health information secure.</p>
 
-          <p>If you keep getting this message, speak to your GP and make sure they have your correct date of birth.</p>
-      
-      <p>Reference: <b>CID1131</b></p>
+          <p>Reference: <strong>CID2014</strong></p>
+
+          <div class="nhsuk-inset-text">
+            <span class="nhsuk-u-visually-hidden">Information: </span>
+            <p><a href="#">What does reference CID2014 mean?</a></p>
+          </div>
 
     </div>  
   </div>
