--- a/app/views/discovery-2023/error/timeout.html
+++ b/app/views/discovery-2023/error/timeout.html
@@ -8,7 +8,7 @@
 
 <!-- Set the page title inside the pageTitle block -->
 {% block pageTitle %}
-You cannot continue
+Your session has ended
 {% endblock %}
 
 <!-- Breadcrumb goes inside the beforeContent block -->
@@ -29,15 +29,11 @@ You cannot continue
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
 
-      <h1>You cannot continue</h1>  
+      <h1>Your session has ended</h1>  
 
-          <p>You have entered the wrong date of birth too many times.</p>
+          <p>This is to keep your information secure, because you have been inactive on NHS login for <strong>60 minutes</strong>.</p>
 
-          <p>You must wait 15 minutes before you can try again.</p>
-
-          <p>If you keep getting this message, speak to your GP and make sure they have your correct date of birth.</p>
-      
-      <p>Reference: <b>CID1133</b></p>
+          <p>To continue, close the website or app you were trying to access and login again</p>
 
     </div>  
   </div>
