--- a/app/views/index.html
+++ b/app/views/index.html
@@ -56,6 +56,43 @@
                 <a class="nhsuk-contents-list__link" href="discovery-2023/email/existing-account-recovery">Existing account recovery email</a>
               </li>
             </ol>
+            <details class="nhsuk-details">
+              <summary class="nhsuk-details__summary">
+                <span class="nhsuk-details__summary-text">
+                  Errors
+                </span>
+              </summary>
+              <div class="nhsuk-details__text">
+                <p>The same checks are done to see if a user has changed state since the GP checks (journey 1), these screens are shown to the user.</p>
+                <ul>
+                  <li><a href="discovery-2023/error/alreadyhaveaccount">Already have an acount</a></li>
+                  <li><a href="discovery-2023/error/expired">Already uplifted (same as link expired)</a></li>
+                  <li><a href="discovery-2023/error/account-disabled">Account disabled</a></li>
+                  <li><a href="discovery-2023/error/account-disabled-dead">Account disabled - User dead</a></li>
+                  <li><a href="discovery-2023/error/duplicate-account-p0">Duplicate accounts - P0</a></li>
+                  <!-- duplicate-account-p0 = duplicate-mobile-notification -->
+                  <li><a href="discovery-2023/error/expired">Link expired (same as already uplifted)</a></li>
+                  <li><a href="discovery-2023/error/generic">Generic error</a></li>
+                  <li><a href="discovery-2023/error/lockout">Lockout</a></li>
+                  <li><a href="discovery-2023/error/expiredotp">OTP expired</a></li>
+                  <li><a href="discovery-2023/error/lockoutotp">OTP lockout</a></li>
+                  <li><a href="discovery-2023/error/timeout">Timeout</a></li>
+                  <li><a href="discovery-2023/error/wrongotp">Wrong code entered</a></li>
+                </ul>
+                <p>P5 only details error screens</p>
+                <ul>
+                  <li><a href="discovery-2023/error/duplicate-account-p5">Duplicate accounts - P5</a></li>
+                  <!-- duplicate-account-p5 = duplicate-nhsnumber-notification -->
+                  <li><a href="discovery-2023/error/partial-details-match">Some of these details are wrong</a></li>
+                  <li><a href="discovery-2023/error/wrong-match">Wrong details</a></li>
+                </ul>
+                <p>Other error triggers</p>
+                <ul>
+                  <li><a href="discovery-2023/email/existing-account-recovery">Email - Already set up duplicate email sent from duplicates page</a></li>
+                </ul>
+            
+              </div>
+            </details>
             <hr class="nhsuk-section-break nhsuk-section-break--l nhsuk-section-break--visible">
             <ul>
               <li><a href="discovery-2023/research/march-2023" target="_blank">Research link</a></li>
