--- a/app/views/discovery-2023/error/expired.html
+++ b/app/views/discovery-2023/error/expired.html
@@ -32,19 +32,19 @@ Your invitation to set up an NHS login has expired
       <h1>Your invitation to set up an NHS login has expired</h1>  
 
 
-      <p>This could be because:
+      <p>This is because you:
       <ul class="nhsuk-list nhsuk-list--bullet">
-        <li>you received it more than <strong>7 days ago</strong></li>
-        <li>you have already set up an NHS login account</li>
+        <li>received your invitation more than <strong>7 days ago</strong> and did not use it</li>
+        <li>have already used it to set up an NHS login</li>
       </ul>
       </p>
       
       <p>
-        If you received your invitation more than <strong>7 days ago</strong>, it has expired and will no longer work. If you want to set up an NHS login, you will need to ask your GP to send a new invitation.
+        If you want to set up an NHS login, you will need to ask your GP to send a new invitation.
       </p>
 
       <p>
-        If you have already set up an NHS login, you can use it to access health and care apps or websites, such as the <a href="https://www.nhsapp.service.nhs.uk/login">NHS App</a>, or <a href="https://www.nhs.uk/">NHS website</a>.
+        If you have already set up an NHS login, you can use it to access the <a href="https://www.nhsapp.service.nhs.uk/login">NHS App</a>.
       </p>
 
       <p>Reference: <b>CID1102</b></p>
