OTP content rearrange

--- a/app/views/discovery-2023/existing-uplift/otp.html
+++ b/app/views/discovery-2023/existing-uplift/otp.html
@@ -29,6 +29,7 @@ Enter the 6 digit security code
         <h1 class="nhsuk-heading-l">Enter the 6 digit security code</h1>
 
         <p class="nhsuk-body">We have sent a text to <strong>•••••••8209</strong>.</p>
+        <p class="nhsuk-body">This is the phone number that is registered with your GP surgery.</p>
 
         <details class="nhsuk-details">
           <summary class="nhsuk-details__summary">
@@ -38,6 +39,7 @@ Enter the 6 digit security code
           </summary>
           <div class="nhsuk-details__text">
             <p>When we are really busy, it may take a bit longer for your code to arrive.</p>
+
             <p class="nhsuk-body">
               <a href="login-enter-OTP?resendOTP=true">Send the security code again</a>.
             </p>
@@ -61,7 +63,6 @@ Enter the 6 digit security code
 
         <div class="nhsuk-inset-text">
           <span class="nhsuk-u-visually-hidden">Information: </span>
-          <p>This is the phone number that is registered with your GP surgery.</p>
           <p>If you do not recognise this phone number or do not have access to your phone, you will need to update your records with your GP.</p>
         </div>
 
