Steps screen and OTP update

--- a/app/views/discovery-2023/create-account/steps-finish-set-up.html
+++ b/app/views/discovery-2023/create-account/steps-finish-set-up.html
@@ -33,7 +33,7 @@ Next steps
                   <p class="service-access__item__title__text__leftandright"><b>Next step</b></p>
                   <h3 class="service-access__item__title">Finish setting up your NHS login</h3>
                   <div class="service-access__item__desc">
-                    <p>Enter a password to finish setting up.</p>
+                    <p>Enter a password and review your details to finish setting up.</p>
                   </div>
                   <form method="POST">
                     <button class="nhsuk-button full-width" style="display:block; margin-bottom:0;">Continue</button>
