--- a/app/views/discovery-2023/existing-uplift/otp.html
+++ b/app/views/discovery-2023/existing-uplift/otp.html
@@ -45,6 +45,18 @@ Enter the 6 digit security code
             </p>
           </div>
         </details>
+
+        <details class="nhsuk-details">
+          <summary class="nhsuk-details__summary">
+            <span class="nhsuk-details__summary-text">
+              I don't recognise this number
+            </span>
+          </summary>
+          <div class="nhsuk-details__text">
+            <p>If you do not recognise this phone number or do not have access to your phone, you will need to update your records with your GP.</p>
+          </div>
+        </details>
+
         <div class="nhsuk-u-padding-bottom-4"></div>
 
         <div class="nhsuk-form-group">
@@ -60,11 +72,6 @@ Enter the 6 digit security code
         <a href="steps-finish-set-up?p5=trueNow" role="button" draggable="false" class="nhsuk-button">
           Continue
         </a>
-
-        <div class="nhsuk-inset-text">
-          <span class="nhsuk-u-visually-hidden">Information: </span>
-          <p>If you do not recognise this phone number or do not have access to your phone, you will need to update your records with your GP.</p>
-        </div>
 
     </div>
    
