--- a/app/views/discovery-2023/email/existing-account-uplift.html
+++ b/app/views/discovery-2023/email/existing-account-uplift.html
@@ -46,7 +46,7 @@ Finish setting up your NHS login
       </p>
 
       <p class="nhsuk-body">
-        You will need to enter the password you set up with your NHS login account.
+        You will need to enter the password you set up with your NHS login account and then confirm the details we have for you are correct.
       </p>
 
       <p class="nhsuk-body">This invitation will expire in <strong>7 days</strong>.</p>
