--- a/app/views/discovery-2023/create-account/steps-who.html
+++ b/app/views/discovery-2023/create-account/steps-who.html
@@ -39,7 +39,7 @@ Next steps
                   <p class="service-access__item__title__text__leftandright"><b>Last step</b></p>
                   <h3 class="service-access__item__title">Finish setting up your NHS login</h3>
                   <div class="service-access__item__desc">
-                    <p>Enter a password and review your details to finish setting up.</p>
+                    <p>Confirm the details we have for you are correct and enter a password to finish setting up.</p>
                   </div>
               </li>
             </ol>
