--- a/app/views/discovery-2023/email/invite-new-account.html
+++ b/app/views/discovery-2023/email/invite-new-account.html
@@ -45,7 +45,7 @@
         We need to send a 6 digit security code to the mobile phone number you used to register with your GP.
       </p>
 
-      <p class="nhsuk-body">You will also need to create a password.</p>
+      <p class="nhsuk-body">You will also need to create a password and then confirm the details we have for you are correct.</p>
 
       <p class="nhsuk-body">This invitation will expire in <strong>7 days</strong>.</p>
 
