--- a/app/views/discovery-2023/existing-uplift/confirm-my-details.html
+++ b/app/views/discovery-2023/existing-uplift/confirm-my-details.html
@@ -18,7 +18,7 @@ Confirm your details
             </h1>
           </legend>
           <p class="nhsuk-body">
-            We found this NHS record using the information you gave us.
+            We found this NHS record using the information your GP surgery gave us.
           </p>
 
           <div class="nnhsuk-table-container">
