--- a/app/views/discovery-2023/existing-uplift/otp.html
+++ b/app/views/discovery-2023/existing-uplift/otp.html
@@ -49,7 +49,7 @@ Enter the 6 digit security code
         <details class="nhsuk-details">
           <summary class="nhsuk-details__summary">
             <span class="nhsuk-details__summary-text">
-              I don't recognise this number
+              I do not recognise this number
             </span>
           </summary>
           <div class="nhsuk-details__text">
