--- a/app/views/discovery-2023/email/existing-account-uplift.html
+++ b/app/views/discovery-2023/email/existing-account-uplift.html
@@ -54,12 +54,12 @@ Finish setting up your NHS login
       {% if data.error === 'trueNow' %} 
 
       <a href="../existing-uplift/spinner-set-up?error=trueNow" target="_blank" class="nhsuk-button">Finish setting up your NHS login</a>
-      <p><a href="../existing-uplift/spinner-set-up?error=trueNow" target="_blank">https://settings.login.nhs.uk/</a></p>
+      <p><a href="../existing-uplift/spinner-set-up?error=trueNow" target="_blank">https://access.login.nhs.uk/finish-set-up</a></p>
 
       {% else %}
 
       <a href="../existing-uplift/spinner-set-up" target="_blank" class="nhsuk-button">Finish setting up your NHS login</a>
-      <p><a href="../existing-uplift/spinner-set-up" target="_blank">https://settings.login.nhs.uk/</a></p>
+      <p><a href="../existing-uplift/spinner-set-up" target="_blank">https://access.login.nhs.uk/finish-set-up</a></p>
       
       {% endif %}
 
