Spinner confirm and routing change
Confirm details

--- a/app/views/discovery-2023/existing-uplift/steps-finish-set-up.html
+++ b/app/views/discovery-2023/existing-uplift/steps-finish-set-up.html
@@ -8,20 +8,8 @@ Next steps
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
 
-
-      {% if data.p0 === 'trueNow' %} 
-
-      <form action="login-enter-password?p0=trueNow" method="post" class="form">
+      <form action="confirm-my-details" method="post" class="form">
         <fieldset class="nhsuk-fieldset">
-
-      {% endif %}
-		
-      {% if data.p5 === 'trueNow' %} 
-
-      <form action="login-enter-password?p5=trueNow" method="post" class="form">
-        <fieldset class="nhsuk-fieldset">
-
-      {% endif %}
           
           <div class="service-access-wrapper">
             <ol class="service-access">
