--- a/app/views/discovery-2023/create-account/spinner-confirm.html
+++ b/app/views/discovery-2023/create-account/spinner-confirm.html
@@ -3,13 +3,13 @@
 {% from 'back-link/macro.njk' import backLink %}
 
 {% block pageTitle %}
-Confirming your details
+Finishing set up
 {% endblock %}
 
 {% block content %}
   <div class="nhsuk-grid-row">
       <div class="nhsuk-width-container">
-         <h1 class="nhsuk-heading-l">Confirming your details</h1>
+         <h1 class="nhsuk-heading-l">Finishing set up</h1>
      
       <form action="auth" method="post">
         <section class="loading-container" id="gp-connect-0" style="display:block; min-height: 16em;">
