--- a/app/views/discovery-2023/create-account/steps-finish-set-up.html
+++ b/app/views/discovery-2023/create-account/steps-finish-set-up.html
@@ -35,7 +35,7 @@ Next steps
                   <div class="service-access__item__desc">
                     <p>Confirm the details we have for you are correct and enter a password to finish setting up.</p>
                   </div>
-                  <form method="POST">
+                  <form action="confirm-my-details" method="POST">
                     <button class="nhsuk-button full-width" style="display:block; margin-bottom:0;">Continue</button>
                   </form>
               </li>
