Content update on partial match error

--- a/app/views/discovery-2023/error/partial-details-match.html
+++ b/app/views/discovery-2023/error/partial-details-match.html
@@ -58,7 +58,7 @@
           </table>
           </div>
           <p class="nhsuk-body">
-            If your name is wrong, you should contact your GP surgery to update your details. Doing so will then update your details on this NHS record.
+            If your name is wrong, you should contact your GP surgery to update your details. They will also update these details on your NHS record.
           </p>
           <p class="nhsuk-body">
             If all of these details are wrong, <a>contact us and let us know</a>.
