Replace stat characters in hidden numbers

--- a/app/views/discovery-2023/error/partial-details-match.html
+++ b/app/views/discovery-2023/error/partial-details-match.html
@@ -49,7 +49,7 @@
                 NHS number
               </td>
               <td class="nhsuk-summary-list__value">
-                {{ data['enterNHSNumber'] or '*** *** 3456' }}
+                {{ data['enterNHSNumber'] or '••• ••• 3456' }}
               </td>
           
             </tr>
