--- a/app/views/discovery-2023/error/wrong-details.html
+++ b/app/views/discovery-2023/error/wrong-details.html
@@ -49,7 +49,7 @@ This NHS record does not match your details
                 NHS number
               </td>
               <td class="nhsuk-summary-list__value">
-                {{ data['enterNHSNumber'] or '*** *** 3456' }}
+                {{ data['enterNHSNumber'] or '••• ••• 3456' }}
               </td>
           
             </tr>
