Update enter-password validation
Add inline validation

--- a/app/views/discovery-2023/existing-uplift/login-enter-password.html
+++ b/app/views/discovery-2023/existing-uplift/login-enter-password.html
@@ -11,6 +11,23 @@
 {% block content %}
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
+<!-- ERROR SUMMARY OPEN -->
+
+<div id="errorSummary" style="display: none;" class="nhsuk-error-summary" aria-labelledby="error-summary-title" role="alert" tabindex="-1">
+  <h2 class="nhsuk-error-summary__title" id="error-summary-title">
+    There is a problem
+  </h2>
+  <div class="nhsuk-error-summary__body">
+    <ul class="nhsuk-list nhsuk-error-summary__list" role="list">
+      <li>
+        <a id="summaryErrorMessageContent" href="#enterPassword">Enter your password</a>
+      </li>
+    </ul>
+  </div>
+</div>
+
+<!-- ERROR SUMMARY CLOSE -->
+
       <form action="confirm-my-details" autocomplete="on" method="post">
         <fieldset class="nhsuk-fieldset">
           <legend class="nhsuk-fieldset__legend">
@@ -21,10 +38,16 @@
           <p class="nhsuk-body">
             This is the password you set up with your NHS login account.
           </p>
-          <div class="nhsuk-form-group">
+          
+          <div class="nhsuk-form-group" id="formGroup">
             <label class="nhsuk-label" for="createPassword">
               Password
             </label>
+            <!-- ERROR MESSAGE SPAN OPEN: FOR INLINE VALIDATION -->
+            <span id="errorMessageContainer" class="nhsuk-error-message" style="display: none;" id="enterPassword-error">
+              <span class="nhsuk-u-visually-hidden">Error:</span> <span id="errorMessageContent">Enter the security code</span>
+            </span>
+            <!-- ERROR MESSSAGE SPAN CLOSE: FOR INLINE VALIDATION -->
             <input autocomplete="on" class="nhsuk-input nhsuk-input--width-20  nhsuk-u-margin-bottom-4" id="enterPassword" name="enterPassword" type="password" data-toggle-password-field-confirm>
             <div style="display: inline; position: relative;">
               <div style="display: inline; position: relative;">
@@ -33,27 +56,29 @@
                   <span id="text-toggle" class="nhsuk-body-s" style="margin-bottom: 2px; margin-top: 2px; margin-left: 8px; margin-right: 8px;"><b>Show</b></span>
                 </button>
               </div>
+            </div>
           </div>
+
           <p class="nhsuk-body">You can <a href="/discovery-2023/reset-password/check-your-email">reset your password</a> if you cannot remember it.</p>
         <div>
 
-          {% if data.p5 === 'trueNow' %}
-
-    
-          <button data-redirect="confirm-my-details" class="nhsuk-button full-width" type="submit" id="button--save">
+            {% if data.p5 === 'trueNow' %}
 
       
-          {% else %}
+            <button data-redirect="confirm-my-details" class="nhsuk-button full-width" type="submit" id="button--save">
 
-          <button data-redirect="spinner-confirm" class="nhsuk-button full-width" type="submit" id="button--save">
+        
+            {% else %}
 
-          {% endif %}
+            <button data-redirect="spinner-confirm" class="nhsuk-button full-width" type="submit" id="button--save">
 
-          Continue
-          </button>
+            {% endif %}
+
+            Continue
+            </button>
 
 
-        </div>
+          </div>
         </fieldset>
       </form>
 
@@ -61,29 +86,85 @@
     </div>
   </div>
 
-  <script type="text/javascript">
-    submitSpinner()
+  <script>
+    // THIS SCRIPT IS FOR THE INLINE ERROR VALIDATION AND BUTTON SPINNER
+    document.querySelector("#button--save").addEventListener("click",function(e) { 
+      var isValid = inlineValidation();
   
-    function buttonClicked(target) {
-      target.setAttribute('disabled', 'disabled')
-      target.className += ' button--save'
+      if(!isValid) {
+        e.preventDefault();
+      }
+      else {
+        submitSpin();
+      }
+    })
+  
+    document.querySelector("#enterPassword").addEventListener("change",function(e) {
+      inlineValidation();
+    })
+  
+    function showErrorSummary(errorMessage) {
+      var errorSummary = document.querySelector("#errorSummary").style.display = "block";
+      if(errorMessage) {
+        var summaryErrorMessageContent = document.querySelector("#summaryErrorMessageContent").textContent = errorMessage;
+      }
+      else {
+        var summaryErrorMessageContent = document.querySelector("#summaryErrorMessageContent").textContent = "default error message";
+      }
+      
+    }
+  
+    function hideErrorSummary() {
+      var errorSummary = document.querySelector("#errorSummary").style.display = "none";
+    }
+  
+    function showInputError(errorMessage) {
+      var formGroup = document.querySelector("#formGroup").classList.add("nhsuk-form-group--error");
+      var errorMessageContainer = document.querySelector("#errorMessageContainer").style.display = "block";
+  
+      if(errorMessage) {
+        var errorMessageContent = document.querySelector("#errorMessageContent").textContent = errorMessage;
+      }
+  
+      else {
+        var errorMessageContent = document.querySelector("#errorMessageContent").textContent = "default error message";
+      }
+    }
+  
+    function hideInputError() {
+      var formGroup = document.querySelector("#formGroup").classList.remove("nhsuk-form-group--error");
+      var errorMessageContainer = document.querySelector("#errorMessageContainer").style.display = "none";
+    }
+  
+    function inlineValidation() {
+      var inputValue = document.querySelector("#enterPassword").value;
+      
+      if(inputValue.length === 0) {
+        showErrorSummary("Enter your password");
+        showInputError("Enter your password");
+        return false;
+      }
+  
+      if(inputValue !== "password") {
+        showErrorSummary("Enter the correct password");
+        showInputError("Enter the correct password");
+        return false;
+      }
+  
+      return true;
+    }
+
+    // button spinner code
+
+    function submitSpin() {
+      var button = document.querySelector("#button--save")
+      button.setAttribute('disabled', 'disabled')
+      button.className += ' button--save'
       setTimeout(function () {
-        window.location.href = target.dataset.redirect;
+        window.location.href = button.dataset.redirect;
       }, 2000)
     }
-  
-    function submitSpinner() {
-      var selects = document.getElementById('button--save')
-      selects.addEventListener('click', function (event) {
-        event.preventDefault()
-        if (selects.getAttribute('disabled') === 'disabled') {
-          console.log('already clicked')
-        } else {
-          event.preventDefault()
-          console.log(selects.getAttribute('disabled'))
-          buttonClicked(selects)
-        }
-      })
-    }
+
   </script>
+  
 {% endblock %}
