--- a/app/views/createaccount/v2/setup/otp.html
+++ b/app/views/createaccount/v2/setup/otp.html
@@ -99,6 +99,7 @@ Check your phone
   function showInputError(errorMessage) {
     var formGroup = document.querySelector("#formGroup").classList.add("nhsuk-form-group--error");
     var errorMessageContainer = document.querySelector("#errorMessageContainer").style.display = "block";
+    var inputError = document.querySelector("#securityCodes").classList.add("nhsuk-input--error");
 
     if(errorMessage) {
       var errorMessageContent = document.querySelector("#errorMessageContent").textContent = errorMessage;
