--- a/app/views/discovery-2023/existing-uplift/login-enter-password.html
+++ b/app/views/discovery-2023/existing-uplift/login-enter-password.html
@@ -121,6 +121,7 @@
     function showInputError(errorMessage) {
       var formGroup = document.querySelector("#formGroup").classList.add("nhsuk-form-group--error");
       var errorMessageContainer = document.querySelector("#errorMessageContainer").style.display = "block";
+      var inputError = document.querySelector("#enterPassword").classList.add("nhsuk-input--error");
   
       if(errorMessage) {
         var errorMessageContent = document.querySelector("#errorMessageContent").textContent = errorMessage;
