--- a/app/views/createaccount/v2/setup/otp.html
+++ b/app/views/createaccount/v2/setup/otp.html
@@ -54,7 +54,7 @@ Check your phone
           <label class="nhsuk-label" for="securityCodes">
           Security code
           </label>
-          <span id="errorMessageContainer" class="nhsuk-error-message" style="display: none;" id="securityCodes-error">
+          <span id="errorMessageContainer" class="nhsuk-error-message" style="display: none;">
             <span class="nhsuk-u-visually-hidden">Error:</span> <span id="errorMessageContent">Enter the security code</span>
           </span>
           <input class="nhsuk-input nhsuk-input--width-10" id="securityCodes" name="code" type="number" aria-describedby="securityCodes" autocomplete="off" pattern="[0-9]*" value="" style="margin-bottom: 8px;">
