--- a/app/views/discovery-2023/existing-uplift/login-enter-password.html
+++ b/app/views/discovery-2023/existing-uplift/login-enter-password.html
@@ -44,7 +44,7 @@
               Password
             </label>
             <!-- ERROR MESSAGE SPAN OPEN: FOR INLINE VALIDATION -->
-            <span id="errorMessageContainer" class="nhsuk-error-message" style="display: none;" id="enterPassword-error">
+            <span id="errorMessageContainer" class="nhsuk-error-message" style="display: none;">
               <span class="nhsuk-u-visually-hidden">Error:</span> <span id="errorMessageContent">Enter the security code</span>
             </span>
             <!-- ERROR MESSSAGE SPAN CLOSE: FOR INLINE VALIDATION -->
