--- a/app/views/createaccount/v2/setup/passwordset.html
+++ b/app/views/createaccount/v2/setup/passwordset.html
@@ -15,58 +15,73 @@ Create a password
         "text": "Back to: Enter your email"
       }) }} #}
 
+<!-- ERROR SUMMARY OPEN -->
+
+<div id="errorSummary" style="display: none;" class="nhsuk-error-summary" aria-labelledby="error-summary-title" role="alert" tabindex="-1">
+  <h2 class="nhsuk-error-summary__title" id="error-summary-title">
+    There is a problem
+  </h2>
+  <div class="nhsuk-error-summary__body">
+    <ul class="nhsuk-list nhsuk-error-summary__list" role="list">
+      <li>
+        <a id="summaryErrorMessageContent" href="#createPassword">Enter your password</a>
+      </li>
+      <li>
+        <a id="summaryErrorMessageContent" href="#confirmPassword">Enter your password</a>
+      </li>
+    </ul>
+  </div>
+</div>
+
+<!-- ERROR SUMMARY CLOSE -->
+
       <h1>
         Create a password
       </h1>
 
+      <p>Your password must have:
+        <ul>
+          <li>8 characters or more</li>
+          <li>1 capital letter or more</li>
+        </ul>
+      </p> 
+            
+      <!-- input 1: create password -->
+      <label class="nhsuk-label" for="createPassword">
+        Create a password
+      </label>
+      <input autocomplete="on" class="nhsuk-input nhsuk-input--width-20" data-toggle-password-field id="createPassword" name="createPassword" type="password" aria-describedby="create password">
+        <div style="display: inline; position: relative;">
+          <button type="button" aria-pressed="false" class="button-link form__toggle-password" data-toggle-password style="border: none; position: absolute; right: 10px; top: -5px;">
+            <span class="nhsuk-body-s" style="margin-bottom: 0px;"><b>Show</b></span>
+          </button>
+        </div>
+        
+      <!-- input 2: confirm password -->
+      <label class="nhsuk-label nhsuk-u-margin-top-3" for="confirmPassword">
+          Confirm password
+        </label>
+      <input autocomplete="on" class="nhsuk-input nhsuk-input--width-20" data-toggle-password-field-confirm id="confirmPassword" name="confirmPassword" type="password" aria-describedby="confirm password">
+      <div style="display: inline; position: relative;">
+        <div style="display: inline; position: relative;">
+          <button type="button" aria-pressed="false" data-toggle-password-confirm class="button-link form__toggle-password" style="border: none; position: absolute; right: 10px; top: -5px;">
+            <span id="text-toggle" class="nhsuk-body-s" style="margin-bottom: 0px;"><b>Show</b></span>
+          </button>
+        </div>          
+      </div>
+
+        <h2 style="font-size:20px; margin:1.5em 0 0;line-height: 20px">Agree to our terms of use​</h2>
+        <p class="small" style="margin-top: 16px;">We will collect and save your information securely. We will not share your personal information without your consent.</p>
+        <p class="small">By continuing you confirm that you agree to our <a href="/legal/privacy">privacy notice</a> and <a href="/legal/terms">terms and conditions.</a></p>    
 
 
-            <p>Your password must have:<ul></span><li>8 characters or more</li><li>1 capital letter or more</li></ul></p>
-
-          <label class="nhsuk-label" for="input-with-hint-text">
-            Create a password
-          </label>
-        <input autocomplete="on" class="nhsuk-input nhsuk-input--width-20" data-toggle-password-field id="revealPassword" name="revealPassword" type="password" aria-describedby="password reveal">
-          <div style="display: inline; position: relative;">
-            <button type="button" aria-pressed="false" class="button-link form__toggle-password" data-toggle-password style="border: none; position: absolute; right: 10px; top: -5px;">
-              <span class="nhsuk-body-s" style="margin-bottom: 0px;"><b>Show</b></span>
-            </button>
-          </div>
-          
-          <label class="nhsuk-label nhsuk-u-margin-top-3" for="input-with-hint-text">
-              Confirm password
-            </label>
-          <input autocomplete="on" class="nhsuk-input nhsuk-input--width-20" data-toggle-password-field-confirm id="revealPassword" name="revealPassword" type="password" aria-describedby="password reveal">
-          <div style="display: inline; position: relative;">
-            <div style="display: inline; position: relative;">
-              <button type="button" aria-pressed="false" data-toggle-password-confirm class="button-link form__toggle-password" style="border: none; position: absolute; right: 10px; top: -5px;">
-                <span id="text-toggle" class="nhsuk-body-s" style="margin-bottom: 0px;"><b>Show</b></span>
-              </button>
-            </div>          
-          </div>
-
-          <h2 style="font-size:20px; margin:1.5em 0 0;line-height: 20px">Agree to our terms of use​</h2>
-          <p class="small" style="margin-top: 16px;">We will collect and save your information securely. We will not share your personal information without your consent.</p>
-          <p class="small">By continuing you confirm that you agree to our <a href="/legal/privacy">privacy notice</a> and <a href="/legal/terms">terms and conditions.</a></p>    
-
-      {# <form action="{{ thisPage }}" method="post"> #}
-
-{#         <input id="email" name="emailAddress" value="cid.testuser1@gmail.com" type="hidden"> 
-        <input type="hidden" class="nhsuk-input nhsuk-u-width-three-quarters" id="UserFirstName" name="UserFirstName" value="{{ data['UserFirstName'] }}" type="text">
-        <input type="hidden" class="nhsuk-input nhsuk-u-width-three-quarters" id="UserLastName" name="UserLastName" value="{{ data['UserLastName'] }}" type="text">
- #}
-
-        {# <button class="nhsuk-button full-width" >Continue</button> #}
-
-                <a href="success" class="nhsuk-button">Continue</a>
-
-{#       </form> #}
       
-{#      id="button--save"  #}
-          </div>
-        </div>  
 
-        <script type="text/javascript">
+        <button data-redirect="success" class="nhsuk-button full-width" id="button--save" >Continue</button>
+
+
+
+<script type="text/javascript">
  submitSpinner()
   function buttonClicked(target) {
       target.setAttribute('disabled', 'disabled')
