--- a/app/views/discovery-2023/create-account/password-set.html
+++ b/app/views/discovery-2023/create-account/password-set.html
@@ -10,6 +10,26 @@ Create a password
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
 
+<!-- ERROR SUMMARY OPEN -->
+
+<div id="errorSummary" style="display: none;" class="nhsuk-error-summary" aria-labelledby="error-summary-title" role="alert" tabindex="-1">
+  <h2 class="nhsuk-error-summary__title" id="error-summary-title">
+    There is a problem
+  </h2>
+  <div class="nhsuk-error-summary__body">
+    <ul class="nhsuk-list nhsuk-error-summary__list" role="list">
+      <li>
+        <a id="summaryErrorMessageContent" href="#createPassword">Enter your password</a>
+      </li>
+      <li>
+        <a id="summaryErrorMessageContent" href="#confirmPassword">Enter your password</a>
+      </li>
+    </ul>
+  </div>
+</div>
+
+<!-- ERROR SUMMARY CLOSE -->
+
       <h1 class="nhsuk-heading-l">
         Create a password
       </h1>
@@ -22,33 +42,53 @@ Create a password
         </ul>
       </p>
 
-      <label class="nhsuk-label" for="input-with-hint-text">
-            Create a password
-      </label>
-        <input autocomplete="on" class="nhsuk-input nhsuk-input--width-20" data-toggle-password-field id="revealPassword" name="revealPassword" type="password" aria-describedby="password reveal">
+      <!-- input 1: create password -->
+      <div id="formGroup">
+        <label class="nhsuk-label" for="createPassword">
+              Create a password
+        </label>
+        <!-- ERROR MESSAGE SPAN OPEN: FOR INLINE VALIDATION -->
+        <span id="errorMessageContainer" class="nhsuk-error-message" style="display: none;" id="createPassword-error">
+          <span class="nhsuk-u-visually-hidden">Error:</span> <span id="errorMessageContent">Enter the security code</span>
+        </span>
+        <!-- ERROR MESSSAGE SPAN CLOSE: FOR INLINE VALIDATION -->
+          <input autocomplete="on" class="nhsuk-input nhsuk-input--width-20" data-toggle-password-field id="createPassword" name="createPassword" type="password" aria-describedby="create password">
+            <div style="display: inline; position: relative;">
+              <button type="button" aria-pressed="false" class="button-link form__toggle-password" data-toggle-password style="border: none; position: absolute; right: 10px; top: -5px;">
+                <span class="nhsuk-body-s" style="margin-bottom: 0px;"><b>Show</b></span>
+              </button>
+            </div>
+      </div>
+          
+      <!-- input 2: confirm password -->
+      <div id="formGroup">
+        <label class="nhsuk-label nhsuk-u-margin-top-3" for="confirmPassword">
+            Confirm password
+          </label>
+          <!-- ERROR MESSAGE SPAN OPEN: FOR INLINE VALIDATION -->
+          <span id="errorMessageContainer" class="nhsuk-error-message" style="display: none;" id="confirmPassword-error">
+            <span class="nhsuk-u-visually-hidden">Error:</span> <span id="errorMessageContent">Enter the security code</span>
+          </span>
+          <!-- ERROR MESSSAGE SPAN CLOSE: FOR INLINE VALIDATION -->
+        <input autocomplete="on" class="nhsuk-input nhsuk-input--width-20" data-toggle-password-field-confirm id="confirmPassword" name="confirmPassword" type="password" aria-describedby="confirm password">
+        <div style="display: inline; position: relative;">
           <div style="display: inline; position: relative;">
-            <button type="button" aria-pressed="false" class="button-link form__toggle-password" data-toggle-password style="border: none; position: absolute; right: 10px; top: -5px;">
-              <span class="nhsuk-body-s" style="margin-bottom: 0px;"><b>Show</b></span>
+            <button type="button" aria-pressed="false" data-toggle-password-confirm class="button-link form__toggle-password" style="border: none; position: absolute; right: 10px; top: -5px;">
+              <span id="text-toggle" class="nhsuk-body-s" style="margin-bottom: 0px;"><b>Show</b></span>
             </button>
           </div>
-          
-          <label class="nhsuk-label nhsuk-u-margin-top-3" for="input-with-hint-text">
-              Confirm password
-            </label>
-          <input autocomplete="on" class="nhsuk-input nhsuk-input--width-20" data-toggle-password-field-confirm id="revealPassword" name="revealPassword" type="password" aria-describedby="password reveal">
-          <div style="display: inline; position: relative;">
-            <div style="display: inline; position: relative;">
-              <button type="button" aria-pressed="false" data-toggle-password-confirm class="button-link form__toggle-password" style="border: none; position: absolute; right: 10px; top: -5px;">
-                <span id="text-toggle" class="nhsuk-body-s" style="margin-bottom: 0px;"><b>Show</b></span>
-              </button>
-            </div>          
-          </div>
+        </div>
+      </div>
 
-          <h2 style="font-size:20px; margin:1.5em 0 0;line-height: 20px" class="nhsuk-heading-m">Agree to our terms of use​</h2>
-          <p class="small nhsuk-body" style="margin-top: 16px;">We will collect and save your information securely. We will not share your personal information without your consent.</p>
-          <p class="small nhsuk-body">By continuing you confirm that you agree to our <a href="/legal/privacy">privacy notice</a> and <a href="/legal/terms">terms and conditions.</a></p>    
-
-      {# <form action="{{ thisPage }}" method="post"> #}
+      <h2 style="font-size:20px; margin:1.5em 0 0;line-height: 20px" class="nhsuk-heading-m">Agree to our terms of use​</h2>
+      <p class="small nhsuk-body" style="margin-top: 16px;">We will collect and save your information securely. We will not share your personal information without your consent.</p>
+      <p class="small nhsuk-body">By continuing you confirm that you agree to our <a href="/legal/privacy">privacy notice</a> and <a href="/legal/terms">terms and conditions.</a></p>    
+      
+      <button data-redirect="spinner-confirm" class="nhsuk-button full-width" id="button--save" >Continue</button>
+     
+     
+     <!-- DEPRECIATED CODE FOR NOTIFY EMAILS -->
+      <!-- {# <form action="{{ thisPage }}" method="post"> #}
 
 {#         <input id="email" name="emailAddress" value="cid.testuser1@gmail.com" type="hidden"> 
         <input type="hidden" class="nhsuk-input nhsuk-u-width-three-quarters" id="UserFirstName" name="UserFirstName" value="{{ data['UserFirstName'] }}" type="text">
@@ -63,29 +103,147 @@ Create a password
       
 {#      id="button--save"  #}
           </div>
-        </div>  
+        </div>   -->
 
-        <script type="text/javascript">
- submitSpinner()
-  function buttonClicked(target) {
-      target.setAttribute('disabled', 'disabled')
-      target.className += ' button--save'
-      setTimeout(function () {
-        window.location.href = target.dataset.redirect;
-      }, 2000)
+
+<script>
+  // THIS SCRIPT IS FOR THE INLINE ERROR VALIDATION AND BUTTON SPINNER
+  document.querySelector("#button--save").addEventListener("click",function(e) { 
+    var isValid = inlineValidation();
+
+    if(!isValid) {
+      e.preventDefault();
     }
-  function submitSpinner() {
-    var selects = document.getElementById('button--save')
-    selects.addEventListener('click', function (event) {
-      event.preventDefault()
-      if (selects.getAttribute('disabled') === 'disabled') {
-        console.log('already clicked')
-      } else {
-        event.preventDefault()
-        console.log(selects.getAttribute('disabled'))
-        buttonClicked(selects)
-      }
-    })
+    else {
+      submitSpin();
+    }
+  })
+
+  // create password
+
+  document.querySelector("#createPassword").addEventListener("change",function(e) {
+    inlineValidation();
+  })
+
+  function showErrorSummary(errorMessage) {
+    var errorSummary = document.querySelector("#errorSummary").style.display = "block";
+    if(errorMessage) {
+      var summaryErrorMessageContent = document.querySelector("#summaryErrorMessageContent").textContent = errorMessage;
+    }
+    else {
+      var summaryErrorMessageContent = document.querySelector("#summaryErrorMessageContent").textContent = "default error message";
+    }
+    
+  }
+
+  function hideErrorSummary() {
+    var errorSummary = document.querySelector("#errorSummary").style.display = "none";
+  }
+
+  function showInputError(errorMessage) {
+    var formGroup = document.querySelector("#formGroup").classList.add("nhsuk-form-group--error");
+    var errorMessageContainer = document.querySelector("#errorMessageContainer").style.display = "block";
+    var inputError = document.querySelector("#createPassword").classList.add("nhsuk-input--error");
+
+    if(errorMessage) {
+      var errorMessageContent = document.querySelector("#errorMessageContent").textContent = errorMessage;
+    }
+
+    else {
+      var errorMessageContent = document.querySelector("#errorMessageContent").textContent = "default error message";
+    }
+  }
+
+  function hideInputError() {
+    var formGroup = document.querySelector("#formGroup").classList.remove("nhsuk-form-group--error");
+    var errorMessageContainer = document.querySelector("#errorMessageContainer").style.display = "none";
+  }
+
+  function inlineValidation() {
+    var inputValue = document.querySelector("#createPassword").value;
+    
+    if(inputValue.length === 0) {
+      showErrorSummary("Enter your password");
+      showInputError("Enter your password");
+      return false;
+    }
+
+    if(inputValue !== "password") {
+      showErrorSummary("Enter the correct password");
+      showInputError("Enter the correct password");
+      return false;
+    }
+
+    return true;
+  }
+
+  // confirm password
+
+  document.querySelector("#confirmPassword").addEventListener("change",function(e) {
+    inlineValidation();
+  })
+
+  function showErrorSummary(errorMessage) {
+    var errorSummary = document.querySelector("#errorSummary").style.display = "block";
+    if(errorMessage) {
+      var summaryErrorMessageContent = document.querySelector("#summaryErrorMessageContent").textContent = errorMessage;
+    }
+    else {
+      var summaryErrorMessageContent = document.querySelector("#summaryErrorMessageContent").textContent = "default error message";
+    }
+    
+  }
+
+  function hideErrorSummary() {
+    var errorSummary = document.querySelector("#errorSummary").style.display = "none";
+  }
+
+  function showInputError(errorMessage) {
+    var formGroup = document.querySelector("#formGroup").classList.add("nhsuk-form-group--error");
+    var errorMessageContainer = document.querySelector("#errorMessageContainer").style.display = "block";
+    var inputError = document.querySelector("#confirmPassword").classList.add("nhsuk-input--error");
+
+    if(errorMessage) {
+      var errorMessageContent = document.querySelector("#errorMessageContent").textContent = errorMessage;
+    }
+
+    else {
+      var errorMessageContent = document.querySelector("#errorMessageContent").textContent = "default error message";
+    }
+  }
+
+  function hideInputError() {
+    var formGroup = document.querySelector("#formGroup").classList.remove("nhsuk-form-group--error");
+    var errorMessageContainer = document.querySelector("#errorMessageContainer").style.display = "none";
+  }
+
+  function inlineValidation() {
+    var inputValue = document.querySelector("#confirmPassword").value;
+    
+    if(inputValue.length === 0) {
+      showErrorSummary("Enter your password");
+      showInputError("Enter your password");
+      return false;
+    }
+
+    if(inputValue !== "password") {
+      showErrorSummary("Enter the correct password");
+      showInputError("Enter the correct password");
+      return false;
+    }
+
+    return true;
+  }
+
+  // button spinner code
+
+  function submitSpin() {
+    var button = document.querySelector("#button--save")
+    button.setAttribute('disabled', 'disabled')
+    button.className += ' button--save'
+    setTimeout(function () {
+      window.location.href = button.dataset.redirect;
+    }, 2000)
   }
 
 </script>
